--- a/src/NeuzToys/NeuzToys.Shared/NeuzToys.Shared.csproj
+++ b/src/NeuzToys/NeuzToys.Shared/NeuzToys.Shared.csproj
@@ -7,8 +7,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Avalonia" />
         <PackageReference Include="CommunityToolkit.Mvvm"/>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection"/>
+        <PackageReference Include="Semi.Avalonia" />
     </ItemGroup>
 
 </Project>
