--- a/src/NeuzToys/Directory.Packages.props
+++ b/src/NeuzToys/Directory.Packages.props
@@ -18,6 +18,8 @@
     <PackageVersion Include="Irihi.Ursa.Themes.Semi" Version="1.9.0" />
     <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="9.0.3" />
     <PackageVersion Include="Semi.Avalonia" Version="11.2.1.5" />
+    <PackageVersion Include="Serilog" Version="4.0.0" />
+    <PackageVersion Include="Serilog.Sinks.File" Version="6.0.0" />
     <PackageVersion Include="System.Management" Version="9.0.3" />
     <PackageVersion Include="Xamarin.AndroidX.Core.SplashScreen" Version="1.0.1.1" />
   </ItemGroup>
