--- a/src/NeuzToys/NeuzToys.Modules.WinOptimizer/NeuzToys.Modules.WinOptimizer.csproj
+++ b/src/NeuzToys/NeuzToys.Modules.WinOptimizer/NeuzToys.Modules.WinOptimizer.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Serilog" />
       <PackageReference Include="System.Management" />
     </ItemGroup>
 
